<?xml version="1.0"?>
<package format="3">
  <name>tkcore</name>
  <version>0.1.0</version>
  <description>tkcore library</description>
  <maintainer email="info@hipert.it">Hipert Srl</maintainer>
  <license>tk</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
